--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,21 @@
+/*global defults*/
+
+
 body {
     background-color:coral
 }
+
 .layout-wide{
     background-color: crimson;
     max-width: 1200px;
 }
+
+/* headings and typeograpahy */
+
+/* header */
+
+/* navigation */
+
+/* footer */
+
+/* modules */
