--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,9 +5,18 @@ body {
     background-color:coral
 }
 
+img{
+    max-width: 100%;
+}
+
 .layout-wide{
     background-color: crimson;
     max-width: 1200px;
+
+    padding: 40px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 /* headings and typeograpahy */
