--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@
 
 body {
     background-color:coral
+
 }
 
 img{
@@ -28,3 +29,18 @@ img{
 /* footer */
 
 /* modules */
+.content-box {
+    background-color:cornsilk;
+    padding: 20px;
+
+}
+
+@media screen and (min-width: 600px) {
+
+    .news-component {
+        display: grid; 
+        grid-template-columns: 1fr 1fr;
+
+}
+
+}
