--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,12 @@
+@import url( "normalize.css");
+
 /*global defults*/
 
 
 body {
-    background-color:coral
+    background-color:coral;
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
 
@@ -14,7 +18,7 @@ img{
     background-color: crimson;
     max-width: 1200px;
 
-    padding: 40px;
+    padding: 50px;
     margin-left: auto;
     margin-right: auto;
 
@@ -31,7 +35,7 @@ img{
 /* modules */
 .content-box {
     background-color:cornsilk;
-    padding: 20px;
+    padding: 30px;
 
 }
 
