--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,6 @@ img{
 }
 
 
-
 /*layouts*/
 .layout-wide{
 
@@ -23,30 +22,40 @@ img{
     padding: 40px;
     margin-left: auto;
     margin-right: auto;
-
-
-
 }
+
+
 
 /* headings and typeograpahy */
 
-h1,
+h1, 
 h2,
 h3,
 h4,
 h5 {
-    color: white;
+    color: maroon;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
+style>
+a:link {
+  color: rgb(09,31,64); 
 
+}
+
+a:visited {
+  color: maroon; 
+}
+ 
 
 /* header */
 header .layout-wide {
     display: grid;
     grid-template-columns: 300px auto;
-    background-color: rgb(6, 6, 92);
+    background-color: rgb(09,31,64)
+
 }
+
 
 
 /* navigation */
