--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,9 +10,13 @@ body {
 }
 
 img{
-    max-width: 50%;
+    max-width: 100%;
 }
 
+video {
+    max-height: 100%;
+    max-width: 100%;
+}
 
 /*layouts*/
 .layout-wide{
