added in new images

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,4 +97,9 @@ header .layout-wide {
 
 }
 
-
+@media screen and (min-width:600px) {
+    .something {
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
