--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ body {
 
     font-family: 'Pathway Gothic One', sans-serif;
     text-align: center;
+    max-width: 100%;
 
 }
 
@@ -51,6 +52,7 @@ h5 {
 h1 {
 font-size: 50px;
 text-align: center;
+
 }
 style>
 a:link {
