--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,26 +76,25 @@ h2 {
 
 
 
-
 /* header */
 header .layout-wide {
     display: grid;
-    grid-template-columns: 500px auto;
+    grid-template-columns: 250px auto;
     background-color: rgb(09,31,64);
     
 
 }
- .header-detail {
+ .header-detail1 {
     color: white;
     font-size:x-large;
-    display: grid;
+    display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    
+    text-align:center;
 
- 
 
  }
 
+ 
 
   
 
@@ -112,7 +111,6 @@ header .layout-wide {
         display: grid; 
         grid-template-columns: 1fr 1fr;
 
-        
 }
 
 }
